--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,139 @@
+/* GENERAL */
+html {
+  font-size: 60%;
+}
+
+* {
+  color: white;
+}
+
 .App {
   text-align: center;
+  font-family: "Inconsolata", monospace;
+  background-color: #121313;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.button {
+  border-radius: 17px;
+  background: linear-gradient(180deg, #479da9 0%, #725ac1 66.35%);
+  border: none;
+  padding: 30px 80px;
+  font-size: 2.5rem;
+  font-family: "Inconsolata", monospace;
+  font-weight: 600;
+  text-transform: uppercase;
+  margin-top: 15px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+/** Headings **/
+
+h1,
+h2,
+h3,
+h4 {
+  font-family: "Karla", sans-serif;
+  text-transform: uppercase;
+  font-weight: 700;
 }
+
+/* HEADER */
 
 .App-header {
-  background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.heading {
+  font-size: 7.5rem;
+  margin-bottom: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+/** MAIN CONTENT **/
+
+.main {
+  margin-left: 15%;
+  margin-right: 15%;
+}
+
+.main h3,
+.goals h3 {
+  font-size: 4.1rem;
+  text-align: justify;
+  margin-bottom: 30px;
+}
+
+.main h4 {
+  font-size: 4rem;
+  text-align: justify;
+  margin-top: 50px;
+}
+
+.main p,
+.goals p {
+  font-size: 2.1rem;
+  text-align: justify;
+}
+
+.main .highlight {
+  background: linear-gradient(
+    90deg,
+    #0f8b8d 0%,
+    #725ac1 40.63%,
+    #0f8b8d 71.35%,
+    #725ac1 100%
+  );
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-weight: 800;
+}
+
+.mission {
+  margin-bottom: 150px;
+}
+
+@media (min-width: 901px) {
+  .cards-list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 2rem;
+    overflow-x: none;
+    justify-content: center;
   }
-  to {
-    transform: rotate(360deg);
+}
+
+@media (max-width: 900px) {
+  html {
+    font-size: 54%;
   }
+  .cards-list {
+    display: flex;
+    flex-wrap: nowrap;
+    overflow-x: scroll;
+    gap: 2rem;
+  }
+  .heading {
+    font-size: 5rem;
+    margin-bottom: 10px;
+  }
+}
+
+.goals {
+  margin: 0% 10%;
+  padding: 5% 0%;
+}
+
+@media (max-width: 1207px) {
+  .goals {
+    margin: 0% 5%;
+    padding: 5% 0%;
+  }
+}
+
+.underline {
+  text-decoration: underline;
 }
