--- a/src/styles/programs.css
+++ b/src/styles/programs.css
@@ -1,5 +1,5 @@
 .img {
-  width: 550px;
+  width: 480px;
 }
 
 .program-content h4 {
@@ -11,7 +11,8 @@
 }
 
 .program-card {
-  width: 550px;
+  width: 480px;
+  height: auto;
   background-color: #1a1b1c;
   border-radius: 17px;
   padding-bottom: 10%;
