--- a/src/styles/programs.css
+++ b/src/styles/programs.css
@@ -1,5 +1,5 @@
 .img {
-  width: 480px;
+  width: 550px;
 }
 
 .program-content h4 {
@@ -11,11 +11,12 @@
 }
 
 .program-card {
-  width: 480px;
+  width: 550px;
   height: auto;
   background-color: #1a1b1c;
   border-radius: 17px;
   padding-bottom: 10%;
+  font-size: 16px;
 }
 
 .program-content {
@@ -39,5 +40,5 @@
   gap: 20px;
   overflow-x: auto;
   justify-content: center;
-  padding: 80px;
+  padding: 80px 0px;
 }
