--- a/src/App.css
+++ b/src/App.css
@@ -40,6 +40,7 @@ h4 {
 
 .App-header {
   min-height: 100vh;
+  padding-top: 30px;
   display: flex;
   flex-direction: column;
   align-items: center;
