--- a/src/styles/programs.css
+++ b/src/styles/programs.css
@@ -42,3 +42,10 @@
   justify-content: center;
   padding: 80px 0px;
 }
+
+@media (max-width: 900px) {
+  .program-card,
+  .img {
+    width: 400px;
+  }
+}
