--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@ html {
 
 .App {
   text-align: center;
-  font-family: "Inconsolata", monospace;
+  font-family: 'Inconsolata', monospace;
   background-color: #121313;
 }
 
@@ -19,7 +19,7 @@ html {
   border: none;
   padding: 30px 80px;
   font-size: 2.5rem;
-  font-family: "Inconsolata", monospace;
+  font-family: 'Inconsolata', monospace;
   font-weight: 600;
   text-transform: uppercase;
   margin-top: 15px;
@@ -31,7 +31,7 @@ h1,
 h2,
 h3,
 h4 {
-  font-family: "Karla", sans-serif;
+  font-family: 'Karla', sans-serif;
   text-transform: uppercase;
   font-weight: 700;
 }
@@ -104,6 +104,7 @@ h4 {
     gap: 2rem;
     overflow-x: none;
     justify-content: center;
+    padding-bottom: 40px;
   }
 }
 
