--- a/src/App.css
+++ b/src/App.css
@@ -55,11 +55,6 @@ h4 {
 
 /** MAIN CONTENT **/
 
-.main {
-  margin-left: 15%;
-  margin-right: 15%;
-}
-
 .main h3,
 .goals h3 {
   font-size: 4.1rem;
@@ -106,6 +101,10 @@ h4 {
     justify-content: center;
     padding-bottom: 40px;
   }
+  .main {
+    margin-left: 15%;
+    margin-right: 15%;
+  }
 }
 
 @media (max-width: 900px) {
@@ -117,10 +116,15 @@ h4 {
     flex-wrap: nowrap;
     overflow-x: scroll;
     gap: 2rem;
+    padding-bottom: 15px;
   }
   .heading {
     font-size: 5rem;
     margin-bottom: 10px;
+  }
+  .main {
+    margin-left: 5%;
+    margin-right: 5%;
   }
 }
 
